# corsair

./: .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  conftest.py  csrmap.schema.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.cursor/rules/: doc_rules.mdc  general_rules.mdc  git_rules.mdc  python_rules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml  task.yml
.github/workflows/: ci.yml  devcontainer.yml  docs.yml  publish-on-release.yml  test-on-push.yml  test.yml  tests.yml
corsair/: __init__.py  __main__.py  __version__.py  app.py  bitfield.py  cli.py  config.py  core.py  enum.py  generators.py  log.py  map.py  project.py  reader_json.py  readers.py  reg.py  regmap.py  utils.py  version.py  writers.py
corsair/core/: __init__.py  bitfield.py  hwmode.py
corsair/input/: __init__.py  buildspec.py  config.py  target.py
corsair/templates/: amm2lb_verilog.j2  amm2lb_vhdl.j2  apb2lb_verilog.j2  apb2lb_vhdl.j2  axil2lb_verilog.j2  axil2lb_vhdl.j2  c_header.j2  cmsis_svd.j2  ftdi_drv_py.j2  regmap_asciidoc.j2  regmap_asciidoc_rus.j2  regmap_md.j2  regmap_py.j2  regmap_rst.j2  regmap_verilog.j2  regmap_vhdl.j2  spi2lb_verilog.j2  sv_package.j2  verilog_header.j2
docs/: .gitignore  amm.rst  amm2lb.rst  apb.rst  apb2lb.rst  api.md  axil.rst  axil2lb.rst  changelog.md  cli.md  conf.py  config-api.rst  config.rst  configuration.md  configuration.rst  contributing.md  contributing.rst  corsair-build-schema.json  corsair-map-schema.json  csr-map.rst  developing.md  first-steps.md  generate.sh  generators-api.rst  index.md  index.rst  installation.md  introduction.rst  lb.rst  local-bus.rst  readers-api.rst  register-map.rst  regmap-api.rst  regmap.md  regmap.rst  requirements.txt  spi2lb.rst  workflow.rst  writers-api.rst
docs/_static/: custom.css
docs/assets/stylesheets/: extra.css
docs/blog/: .authors.yml  index.md
docs/blog/posts/: release-2-0-0.md
docs/build-file/: config.md  index.md  validation.md
docs/build-file/generators/: c-header.md  custom.md  index.md  markdown.md  verilog.md  vhdl.md
docs/build-file/loaders/: index.md
docs/build-file/targets/: asciidoc.md  c-header.md  custom.md  markdown.md  sv-package.md  sv.md  verilog-header.md  verilog.md  vhdl.md
docs/cli/: index.md
docs/concepts/: build-specification.md  customization.md  file-confidence.md  generators.md  index.md  loaders.md  parsers.md  philosophy.md  register-model.md  workflow.md
docs/cookbook/: index.md
docs/cookbook/api/: custom-flow.md
docs/cookbook/cli/: create-project.md
docs/hardware/: index.md
docs/hardware/fields/: index.md
docs/hardware/protocols/: index.md
docs/img/: corsair_flow.excalidraw  regmap.excalidraw
docs/register-file/: custom.md  index.md  json.md  toml.md  yaml.md
examples/api/: Makefile
examples/api/bitfield/: Makefile  bitfield.py
examples/api/config/: Makefile  csrconfig  csrconfig.py  new.csrconfig
examples/api/demo/: Makefile  regmap.py  regs.md  regs.v
examples/api/enum/: Makefile  enumval.py
examples/api/register/: Makefile  register.py
examples/api/regmap/: Makefile  regmap.py
examples/custom_generator/: Makefile  csrconfig  custom_generator.py  regs.csv  regs.v  regs.yaml  regs_csv.j2
examples/custom_writer/: README.md  csv.j2  custom.py  regmap.json  rmap.csv
examples/latex_generator/: Makefile  csrconfig  custom_generator.py  expansion.vhd  regmap_sx_vhdl.j2  regs.tex  regs.yaml  regs_tex.j2
examples/latex_generator/doc/: expansion.md
examples/regmap_json/: Makefile  csrconfig  regs.json
examples/regmap_json/doc/: regs.md
examples/regmap_json/hw/: regs.v  regs.vh
examples/regmap_txt/: Makefile  csrconfig  regs.txt
examples/regmap_txt/doc/: regs.adoc  regs.md
examples/regmap_txt/hw/: regs.v  regs.vh  regs.vhd  regs_pkg.sv
examples/regmap_txt/sw/: regs.h  regs.py
examples/regmap_yaml/: Makefile  csrconfig  regs.yaml
examples/regmap_yaml/doc/: regs.adoc
examples/regmap_yaml/hw/: regs.v  regs.vhd  regs_pkg.sv
examples/regmap_yaml/sw/: regs.h  regs.py
examples/simple/: README.md  axil2lb_regs.v  regmap.json  regs.md  regs.v
examples/spi_regs/: .gitignore  Makefile  README.md  demo.py  drv_rmap.py  pinout.pcf  rmap.json  rmap.md  rmap.py  rmap.v  sdc.py  spi2lb_rmap.v  test.py  top.sv
schemas/: README.md  corsair-build-schema.json  corsair-map-schema.json  generate.sh
src/corsair/: __init__.py  __main__.py  _build.py  _model.py  _types.py  _version.py  log.py  model.py  utils.py  version.py
src/corsair/_app/: __init__.py  build.py  check.py  init.py  log.py  main.py  schema.py  schemas.py  version.py
src/corsair/_generators/: __init__.py  base.py  markdown.py  verilog.py  vhdl.py  wavedrom.py
src/corsair/_loaders/: __init__.py  base.py  pymodule.py  serialized.py
src/corsair/_parsers/: __init__.py  base.py  deserializer.py
src/corsair/_templates/: __init__.py  env.py  regmap.md.j2  regmap.v.j2
src/corsair/core/: __init__.py  bitfield.py  enum.py  field.py  item.py  (+2 more)
tests/: __init__.py  conftest.py  test_bitfield.py  test_build.py  test_cli.py  test_config.py  test_enum.py  test_examples.py  test_generators.py  test_readers.py  test_reg.py  test_regmap.py  test_utils.py  test_writers.py
tests/cli/: __init__.py  test_build.py  test_check.py  test_init.py  test_logging.py  test_schema.py
tests/core/: __init__.py  test_hwmode.py  test_item.py
tests/data/: config.json  config.yaml  map.json  map.yaml  map.yml
tests/generators/: __init__.py  test_custom.py  test_markdown.py
tests/hdl/: sim.py  test_apb2lb.py  test_axil2lb.py  test_lb_bridge.py  test_regmap.py  test_rmap.py
tests/input/: __init__.py  test_buildspec.py  test_config.py  test_target.py
tests/loaders/: __init__.py  test_loaders.py
tests/model/: __init__.py  test_access.py  test_convert_loc.py  test_enum.py  test_field.py  test_field_array.py  test_hardware.py  test_item.py  test_map.py  test_map_array.py  test_memory.py  test_memory_array.py  test_register.py  test_register_array.py  utils.py
(+108 files in other folders)
