[tool.poetry]
name = "corsair"
version = "0.0.0"
description = "Control and Status Register map generator for FPGA/ASIC projects"
authors = ["esynr3z <esynr3z@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/esynr3z/corsair"
documentation = "https://corsair.readthedocs.io/"
keywords = [
    "CSR",
    "registers",
    "generator",
    "Verilog",
    "SystemVerilog",
    "Verilog",
    "RAL",
    "FPGA",
    "ASIC",
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.poetry.scripts]
corsair = "corsair.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"
jinja2 = "^3.1.4"
wavedrom = "^2.0.3.post3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^3.5.0"
commitizen = "^3.29.1"
pyright = "^1.1.383"
pre-commit-hooks = "^5.0.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 120
exclude = [
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs",           # FIXME: need to remove before meging to master
    "examples",       # FIXME: need to remove before meging to master
]
include = ["*.py", "**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # incompatible with D211
    "D213", # incompatible with D212
    # Offical guide recommends disable these to avoid conflicts with formatter
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "TD001",  # invalid-todo-tag
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "FIX",    # flake8-fixme
    "EM101",  # raw-string-in-exception
    "FBT",    # flake8-boolean-trap
]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = [
    "S101",    # assert
    "PLR2004", # magic-value-comparison
    "E712",    # true-false-comparison
]

[tool.ruff.lint.flake8-type-checking]
# Prevent models from being moved into type-checking blocks
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs",           # FIXME: need to remove before meging to master
    "examples",       # FIXME: need to remove before meging to master
]

[tool.poe]
poetry_command = "poe"

[tool.poe.tasks.clean]
help = "Clean project directory from temporary files and folders"
cmd = "rm -rf .ruff_cache .pytest_cache **/__pycache__ dist htmlcov .coverage"

[tool.poe.tasks.format]
help = "Format all the Python code"
cmd = "ruff format"

[tool.poe.tasks.lint]
help = "Lint all the Python code and try to fix thigs automatically"
cmd = "ruff check --fix"

[tool.poe.tasks.check-format]
help = "Check format of all the Python code"
cmd = "ruff format --check"

[tool.poe.tasks.check-lint]
help = "Check lints for all the Python code"
cmd = "ruff check"

[tool.poe.tasks.check-types]
help = "Do type checking for all the Python code"
cmd = "pyright"

[tool.poe.tasks.test]
help = "Run all tests"
cmd = "pytest -v"

[tool.poe.tasks.test-cov]
help = "Run all tests with coverage collection"
cmd = "pytest -v --cov=corsair --no-cov-on-fail --cov-report term-missing --cov-report html"
